...
                } else {
                    List(viewModel.filteredPhotos) { photo in
                        NavigationLink(destination: PhotoDetailScreen(viewModel: viewModel, photo: photo)) {
                            PhotoItem(photo)
                        }
                    }
                    .navigationTitle("Photo List")
                    .listStyle(.plain)
                    .accessibilityIdentifier("photoList")
                }
            }
            .searchable(text: $viewModel.searchText, prompt: "Search Photos")
            .onAppear {
...
